--- a/requirements.yml
+++ b/requirements.yml
@@ -4,6 +4,8 @@ channels:
 - conda-forge
 dependencies:
 - python
-- requests
-- tinydb=3.5.0
-- ujson
+- six=1.10.0=py35_0
+- pip:
+  - requests
+  - tinydb==3.5.0
+  - ujson
